Settings: Replace dark mode switch by theme selector
In VLC settings, remove the old switch that allowed to enable dark mode.
Add a new selector with Bright, Dark and Automatic options which :
 - forces bright theme
 - forces dark theme
 - follows system settings

Changing iOS 13 system-wide theme will not change VLC settings anymore.

Also add the following translations for the new switches :
 - English
 - English (United Kingdom)
 - French
 - German

Closes #663

--- a/Resources/Settings.bundle/Root.inApp.plist
+++ b/Resources/Settings.bundle/Root.inApp.plist
@@ -20,15 +20,25 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>NO</string>
+			<integer>0</integer>
+			<key>Type</key>
+			<string>PSMultiValueSpecifier</string>
 			<key>Key</key>
 			<string>darkMode</string>
 			<key>Title</key>
 			<string>SETTINGS_DARKTHEME</string>
-			<key>Type</key>
-			<string>PSToggleSwitchSpecifier</string>
-			<key>IASKSubtitle</key>
-			<string>SETTINGS_THEME_SUBTITLE</string>
+			<key>Titles</key>
+			<array>
+				<string>SETTINGS_THEME_BRIGHT</string>
+				<string>SETTINGS_THEME_DARK</string>
+				<string>SETTINGS_THEME_SYSTEM</string>
+			</array>
+			<key>Values</key>
+			<array>
+				<integer>0</integer>
+				<integer>1</integer>
+				<integer>2</integer>
+			</array>
 		</dict>
 		<dict>
 			<key>Type</key>
